[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Actors/Snake.gd" type="Script" id=2]
[ext_resource path="res://Assets/snake.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 5 )

[node name="Snake" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3.8147e-06 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0, 9 )
scale = Vector2( 0.283333, 0.3 )
rect = Rect2( -30, -60, 60, 60 )

[node name="StompDetector" type="Area2D" parent="."]
modulate = Color( 0, 0.0196078, 1, 1 )
position = Vector2( 0, -7 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( 0, -2 )
shape = SubResource( 2 )

[node name="EdgeChecker" type="RayCast2D" parent="."]
position = Vector2( 0, 5 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 8

[node name="snake" type="Sprite" parent="."]
position = Vector2( 0, -3.8147e-06 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
